src/objects/ADvendio__ImportedOVKPosition__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>ADvendio__AdvertisementAdvertisementtypeName__c</fullName>
        <label>AdvertisementAdvertisementtypeName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertisementName__c</fullName>
        <label>AdvertisementName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Bookedamount__c</fullName>
        <label>Bookedamount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Bookingfrom__c</fullName>
        <label>Bookingfrom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Bookingto__c</fullName>
        <label>Bookingto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FcPer__c</fullName>
        <label>FcPer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FcPeriod__c</fullName>
        <label>FcPeriod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FcQuantity__c</fullName>
        <label>FcQuantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Guaranteedamount__c</fullName>
        <label>Guaranteedamount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ImportedOVKOffer__c</fullName>
        <label>ImportedOVKOffer</label>
        <referenceTo>ADvendio__ImportedOVKOffer__c</referenceTo>
        <relationshipLabel>ImportedOVKPositions</relationshipLabel>
        <relationshipName>ImportedOVKPositions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__NdAttributesNdType__c</fullName>
        <label>NdAttributesNdType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__NdAttributesNd__c</fullName>
        <label>NdAttributesNd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PlacementDescription__c</fullName>
        <label>PlacementDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PlacementMediaDescription__c</fullName>
        <label>PlacementMediaDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PlacementMediaName__c</fullName>
        <label>PlacementMediaName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PlacementName__c</fullName>
        <label>PlacementName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Placement__c</fullName>
        <label>Placement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PriceBasicpriceB3__c</fullName>
        <label>PriceBasicpriceB3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PricePricemodelSpecialpricemodel__c</fullName>
        <label>PricePricemodelSpecialpricemodel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PricePricemodelStandardpricemodel__c</fullName>
        <label>PricePricemodelStandardpricemodel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PricecalculationAgencynetN2__c</fullName>
        <label>PricecalculationAgencynetN2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PricecalculationCustomernetN1__c</fullName>
        <label>PricecalculationCustomernetN1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PricecalculationGrossB1__c</fullName>
        <label>PricecalculationGrossB1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PricecalculationGrossB2__c</fullName>
        <label>PricecalculationGrossB2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PricecalculationGrossB3__c</fullName>
        <label>PricecalculationGrossB3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Targeting__c</fullName>
        <label>Targeting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ImportedOVKPosition</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ImportedOVKPositions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>